src/components/toolbox/inputs/input.css
@import '../../app/variables.css';
@import '../../app/mixins.css';

:root {
  --height-l: 48px;
  --height-m: 40px;
  --height-s: 36px;
  --height-xs: 32px;
  --vertical-padding-l: 15px;
  --horizontal-padding-l: 20px;
  --vertical-padding-m: 11px;
  --horizontal-padding-m: 16px;
  --vertical-padding-s: 8px;
  --horizontal-padding-s: 10px;
  --vertical-padding-xs: 6px;
  --horizontal-padding-xs: 10px;
}

.wrapper {
  position: relative;
  display: inline-block;
  width: 100%;

  & .status,
  & .icon {
    position: absolute;
    top: var(--vertical-padding-l);
  }

  & .status {
    right: var(--horizontal-padding-l);
  }

  & .icon {
    left: var(--horizontal-padding-l);
  }

  & .loading {
    color: var(--color-ultramarine-blue);
  }

  &.l {
    & .input {
      @mixin contentLargest;

      height: var(--height-l);
      padding: var(--vertical-padding-l) var(--horizontal-padding-l);
    }
  }

  &.m {
    & .input {
      @mixin contentLargest;

      height: var(--height-m);
      padding: var(--vertical-padding-m) var(--horizontal-padding-m);
    }

    & .icon {
      top: var(--vertical-padding-m);
      left: var(--horizontal-padding-m);
    }
  }

  &.s {
    & .input {
      @mixin contentNormal;

      height: var(--height-s);
      padding: var(--vertical-padding-s) var(--horizontal-padding-s);
    }

    & .icon {
      top: var(--vertical-padding-s);
      left: var(--horizontal-padding-s);
    }
  }

  &.xs {
    & .input {
      @mixin contentNormal;

      height: var(--height-xs);
      padding: var(--vertical-padding-xs) var(--horizontal-padding-xs);
    }

    & .icon {
      top: var(--vertical-padding-xs);
      left: var(--horizontal-padding-xs);
    }
  }

  & .input.withIcon {
    padding-left: 36px;
  }

  & .feedback {
    margin-top: 10px;
  }
}

.input {
  @mixin contentLargest;

  background-color: var(--color-white);
  border: 1px solid var(--dark-border-color);
  border-radius: var(--border-radius-standard);
  box-sizing: border-box;
  color: var(--color-maastricht-blue);
  height: var(--height-l);
  outline: none;
  padding: 8px 10px;
  text-align: left;
  transition:
    border var(--animation-speed-fast) linear,
    color var(--animation-speed-fast) linear;
  width: 100%;

  &:focus {
    border-color: var(--color-primary-standard);
  }

  &:global(.error), /* TODO: Remove after all inputs use props */
  &.error {
    border-color: var(--color-burnt-sienna);
    color: var(--color-burnt-sienna);
  }

  &::placeholder {
    color: var(--color-blue-gray);
  }

  &:read-only {
    background-color: var(--color-white);
    border: 1px solid var(--dark-border-color) !important;
    color: var(--color-blue-gray);
    outline: none;
  }
}

.autoresize {
  overflow: hidden;
}

